--- a/app/src/main/res/layout/store_item.xml
+++ b/app/src/main/res/layout/store_item.xml
@@ -31,7 +31,7 @@
                 android:id="@+id/weekly_ad_link"
                 style="@style/StoreItem"
                 android:text="@string/weekly_ad_title"
-                android:textColor="@color/staples_blue"/>
+                android:textColor="@color/staples_red"/>
         </LinearLayout>
         <LinearLayout
             android:layout_width="wrap_content"
@@ -141,7 +141,7 @@
             style="@style/StoreItem"
             android:paddingLeft="6dp"
             android:text="@string/weekly_ad_title"
-            android:textColor="@color/staples_blue"/>
+            android:textColor="@color/staples_red"/>
 
         <!--horizontal rule 4-->
         <View
