--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -69,7 +69,7 @@
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_gravity">center_vertical</item>
         <item name="android:textSize">@dimen/fontsize_14sp</item>
-        <item name="android:textColor">#333333</item>
+        <item name="android:textColor">@color/staples_black</item>
     </style>
 
     <style name="BrowseStyle">
@@ -90,10 +90,10 @@
         <item name="android:paddingRight">4dp</item>
         <item name="android:gravity">start|bottom</item>
         <item name="android:textSize">@dimen/fontsize_15sp</item>
-        <item name="android:textColor">#333333</item>
+        <item name="android:textColor">@color/staples_black</item>
         <item name="textDualSize">@dimen/fontsize_12sp</item>
         <item name="textDualGap">1dp</item>
-        <item name="textDualColor">#ff0000ff</item>
+        <item name="textDualColor">@color/staples_dark_gray</item>
     </style>
 
     <style name="RoundButton">
@@ -102,10 +102,6 @@
         <item name="android:layout_gravity">right|bottom</item>
         <item name="android:layout_marginBottom">@dimen/add_button_margin</item>
         <item name="android:layout_marginRight">@dimen/add_button_margin</item>
-    </style>
-
-    <style name="CartHeader" parent="DrawerStyle">
-        <item name="android:background">#ffff00</item>
     </style>
 
     <style name="GraySubheading">
@@ -118,7 +114,7 @@
     <style name="CheckoutFooter">
         <item name="android:layout_height">wrap_content</item>
         <item name="android:textSize">@dimen/fontsize_16sp</item>
-        <item name="android:textColor">#000000</item>
+        <item name="android:textColor">@color/staples_black</item>
         <!--setting padding individually so that individual values can be overriden -->
         <item name="android:paddingTop">4dp</item>
         <item name="android:paddingBottom">4dp</item>
@@ -167,7 +163,7 @@
         <item name="android:lines">2</item>
         <item name="android:ellipsize">end</item>
         <item name="android:textSize">@dimen/fontsize_14sp</item>
-        <item name="android:textColor">#ff333333</item>
+        <item name="android:textColor">@color/staples_black</item>
     </style>
 
     <style name="LargePriceSticker">
@@ -176,7 +172,7 @@
         <item name="majorTextSize">32sp</item>
         <item name="majorTextColor">@color/staples_red</item>
         <item name="minorTextSize">@dimen/fontsize_24sp</item>
-        <item name="minorTextColor">#ff8a8a8a</item>
+        <item name="minorTextColor">@color/staples_middle_gray</item>
         <item name="android:gravity">center</item>
     </style>
     <style name="SmallPriceSticker">
@@ -185,7 +181,7 @@
         <item name="majorTextSize">@dimen/fontsize_14sp</item>
         <item name="majorTextColor">@color/staples_red</item>
         <item name="minorTextSize">@dimen/fontsize_12sp</item>
-        <item name="minorTextColor">#ff8a8a8a</item>
+        <item name="minorTextColor">@color/staples_middle_gray</item>
     </style>
 
     <style name="LargeRatingStars">
@@ -257,7 +253,7 @@
         <item name="android:imeOptions">actionDone</item>
         <item name="android:singleLine">true</item>
         <item name="android:gravity">center</item>
-        <item name="android:textColorHint">#ff000000</item>
+        <item name="android:textColorHint">@color/staples_black</item>
         <item name="android:textSize">@dimen/fontsize_18sp</item>
     </style>
 </resources>
