--- a/app/src/main/res/layout/shipment_listitem.xml
+++ b/app/src/main/res/layout/shipment_listitem.xml
@@ -7,7 +7,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/shipmentLbl"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="@dimen/verticalspacing_8dp"
         android:textSize="@dimen/fontsize_24sp"
         android:textColor="@color/staples_black"/>
     <TextView
@@ -15,14 +15,14 @@
         android:layout_height="wrap_content"
         android:id="@+id/deliveryDateTV"
         android:layout_alignParentRight="true"
-        android:layout_marginRight="10dp"
+        android:layout_marginRight="@dimen/margin_16dp"
         android:textSize="@dimen/fontsize_16sp"
         android:textColor="@color/staples_black" />
     <View
         android:id="@+id/horizontal_rule"
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="@dimen/verticalspacing_8dp"
         android:background="@color/staples_middle_gray" />
 
     <LinearLayout
@@ -34,12 +34,12 @@
         android:layout_weight="1"
         android:layout_height="120dip"
         android:id="@+id/skuImage"
-        android:layout_marginRight="10dp"
-        android:layout_marginTop="10dp"/>
+        android:layout_marginRight="@dimen/margin_16dp"
+        android:layout_marginTop="@dimen/verticalspacing_8dp"/>
         <LinearLayout
             android:layout_width="0dp"
             android:layout_weight="1"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="@dimen/verticalspacing_8dp"
             android:layout_height="wrap_content"
             android:orientation="vertical">
             <TextView
@@ -55,13 +55,13 @@
                 android:layout_height="wrap_content"
                 android:id="@+id/shipmentPrice"
                 android:textSize="@dimen/fontsize_16sp"
-                android:layout_marginTop="10dp"
+                android:layout_marginTop="@dimen/verticalspacing_8dp"
                 android:textColor="@color/staples_green" />
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                android:layout_marginTop="10dp">
+                android:layout_marginTop="@dimen/verticalspacing_8dp">
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -86,7 +86,7 @@
         <!--android:id="@+id/horizontal_rule"-->
         <!--android:layout_width="match_parent"-->
         <!--android:layout_height="1dp"-->
-        <!--android:layout_marginTop="10dp"-->
+        <!--android:layout_marginTop="@dimen/verticalspacing_8dp"-->
         <!--android:background="@color/background_light_gray" />-->
 
 </LinearLayout>
