--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -18,6 +18,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
+        android:background="@color/staples_white"
         android:visibility="invisible">
         <android.support.v4.widget.DrawerLayout
             android:id="@+id/drawer_layout"
