--- a/app/src/main/res/layout/weekly_ad_in_store.xml
+++ b/app/src/main/res/layout/weekly_ad_in_store.xml
@@ -6,13 +6,15 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:paddingLeft="@dimen/margin_16dp"
+    android:paddingRight="@dimen/margin_16dp"
     android:orientation="vertical"
     android:background="@color/staples_white">
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/inStoreTV"
-        android:paddingTop="10dp"
+        android:paddingTop="@dimen/verticalspacing_8dp"
         android:textSize="@dimen/fontsize_14sp"
         android:textColor="@color/staples_red"
         android:text="@string/avail_retailonly"
@@ -23,18 +25,14 @@
         android:layout_width="@dimen/weekly_ad_image_width"
         android:layout_height="@dimen/weekly_ad_image_height"
         android:layout_gravity="center_horizontal"
-        android:paddingTop="10dp"
-        android:paddingRight="10dp"
-        android:paddingLeft="10dp"
+        android:paddingTop="@dimen/verticalspacing_8dp"
         />
     <TextView
         android:id="@+id/weekly_ad_title_text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="@dimen/fontsize_14sp"
-        android:paddingLeft="10dp"
-        android:paddingRight="10dp"
-        android:paddingTop="10dp"
+        android:paddingTop="@dimen/verticalspacing_8dp"
         android:maxLines="2"
         android:ellipsize="end"
         android:textColor="@color/staples_black"/>
@@ -47,9 +45,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="@dimen/fontsize_12sp"
-            android:paddingLeft="10dp"
-            android:paddingTop="10dp"
-            android:paddingBottom="10dp"
+            android:paddingTop="@dimen/verticalspacing_8dp"
+            android:paddingBottom="@dimen/verticalspacing_8dp"
             android:textStyle="bold"
             android:textColor="@color/staples_red"/>
         <TextView
@@ -58,8 +55,8 @@
             android:layout_height="wrap_content"
             android:textSize="@dimen/fontsize_10sp"
             android:paddingLeft="3dp"
-            android:paddingTop="10dp"
-            android:paddingBottom="10dp"
+            android:paddingTop="@dimen/verticalspacing_8dp"
+            android:paddingBottom="@dimen/verticalspacing_8dp"
             android:textColor="@color/staples_middle_gray"
             android:text="@string/each"
             android:visibility="gone"/>
