--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -58,6 +58,7 @@
         <item name="android:layout_height">32sp</item>
         <item name="android:paddingLeft">8dp</item>
         <item name="android:paddingRight">8dp</item>
+        <item name="android:gravity">center_vertical</item>
         <item name="android:button">@drawable/radio_button_white</item>
         <item name="android:lines">1</item>
         <item name="android:typeface">serif</item>
