--- a/app/src/main/res/layout/weekly_ad_list_item.xml
+++ b/app/src/main/res/layout/weekly_ad_list_item.xml
@@ -7,11 +7,11 @@
     android:layout_height="match_parent"
     card_view:cardBackgroundColor="@color/staples_white"
     card_view:cardCornerRadius="4dp"
+    card_view:contentPadding="@dimen/margin_16dp"
     android:layout_margin="2dp">
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:padding="@dimen/margin_16dp">
+        android:layout_height="match_parent">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
